--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "react-spinners": "^0.14.1",
     "react-svg": "^16.1.34",
     "sass": "^1.77.8"
   },
